<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    tools:context=".SuggestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/form_field_margin"
        android:showDividers="middle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_course">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/activityCourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activityDate"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activityTime"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSendSuggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#6200EA"
                android:text="@string/send_suggest" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>